Old "empty element doesn't catch mouse events" still applies to IE 9. Fix with invisible image.

--- a/demo/360-player/360player.css
+++ b/demo/360-player/360player.css
@@ -102,6 +102,7 @@
  height:100%;
  z-index:2;
  display:none;
+ background-image: url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==); /* old-skool bug: IE 9 won't catch mouse events otherwise. /smash */
 }
 
 .ui360 .sm2-360btn {
